add form to allow user to submit on enter press

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
 	<h1>Beginning API practice: Madagascar Fish Fetcher</h1>
 	<h2>Use the field below or /api/fishGenus</h2>
-	<div>
+
+	<form action="" method="get">
 		<input id="fishG" type="text" placeholder="Please enter a fish genus">
 		<button type="submit" id="btnSubmit">Submit</button>
-	</div>
+	</form>
 	<div>
 		<h2 id="fishGenera"></h2>
 		<h3 id="numberSpecies"></h3>
