add list of available genera to Read (GET) and list styling

--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 <body>
 	<h1>Beginning API practice: Madagascar Fish Fetcher</h1>
 	<h2>Use the field below or /api/fishGenus</h2>
+	<h3>Available Genera are:</h3>
+	<ul>
+		<li>Pachypanchax</li>
+		<li>Bedotia</li>
+		<li>Rheocles</li>
+		<li>Paretroplus</li>
+		<li>Ptychochromis</li>
+		<li>Ptychochromoides</li>
+		<li>Paratilapia</li>
+		<li>Oxylapia</li>
+		<li>Katria</li>
+	</ul>
 
 	<form action="" method="get">
 		<input id="fishG" type="text" placeholder="Please enter a fish genus">
